tests/compile_fail/invalid_float32_zero.c
#define MCBOR_ENABLE_FLOAT32 2
#include "mcbor.h"

int main(void)
{
    return 0;
}
